# UniPass-email-circuits

./: .gitignore  Cargo.toml  README.md  email_2048.vc
crates/email-parser/: Cargo.toml
crates/email-parser/src/: dkim_keys.rs  error.rs  lib.rs  parser.rs  types.rs
crates/plookup-sha256/: Cargo.toml  Design.md
crates/plookup-sha256/src/: kzg10.rs  lib.rs  proof.rs  serialize.rs  sha256.rs  transcript.rs  utils.rs  verifier.rs
crates/plookup-sha256/src/composer/: arithmetic.rs  lookup.rs  mimc.rs  mod.rs  permutation.rs  range.rs  substring.rs
crates/plookup-sha256/src/prover/: mod.rs  prover_key.rs
crates/plookup-sha256/src/prover/widget/: arithmetic.rs  lookup.rs  mimc.rs  mod.rs  permutation.rs  pubmatch.rs  range.rs  substring.rs
crates/prover/: Cargo.toml  PublicInputs.md
crates/prover/src/: circuit.rs  error.rs  lib.rs  parameters.rs  types.rs  utils.rs
crates/prover/src/circuit/: base64.rs  circuit_1024.rs  circuit_2048.rs  circuit_2048_triple.rs  email_1024.rs  email_2048.rs  email_2048_triple.rs  misc.rs  openid.rs  openid_new.rs  tests.rs
crates/prover/src/parameters/: iden3.rs
src/: circuit_1024.rs  circuit_2048.rs  circuit_2048_triple.rs  main.rs  openid.rs
test_data/: .gitignore
test_data/emails/: email-1.eml  email-2.eml  email-3.eml
tests/: circuit_1024.rs  circuit_2048.rs  circuit_2048_triple.rs  email_1024_test.rs  email_2048_test.rs  email_2048_triple_test.rs  openid.rs  openid_new_test.rs  openid_test.rs  test.rs  tests.rs
unipass-verifier-contract/: hardhat.config.js
unipass-verifier-contract/contracts/: PlonkCoreLib.sol  PlookupSingleCore.sol  UnipassVerifier.sol
unipass-verifier-contract/test/: PlookupSingleCore.js  verify_proof.js
