[package]
name = "unipass-examples"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["crates/plookup-sha256", "crates/email-parser", "crates/prover"]

[features]
default = ["std", "parallel"]
std = ["ark-ff/std", "ark-std/std"]
parallel = ["std", "ark-ff/parallel", "ark-std/parallel", "ark-ec/parallel"]

[dependencies]
num-bigint = { version = "0.4", default-features = false }
sha3 = { version = "0.10", default-features = false }
hex = "*"
sha2 = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

ark-std = { version = "0.3", default-features = false }
ark-ff = { version = "0.3", default-features = false }
ark-ec = { version = "0.3", default-features = false }
ark-bn254 = { version = "0.3.0", default-features = false, features = [
    "curve",
] }
ark-serialize = { version = "0.3" }

plonk = { path = "crates/plookup-sha256" }
prover = { path = "crates/prover" }
email-parser = { path = "crates/email-parser" }
