[package]
name = "unipass-examples"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "crates/plookup-sha256",
    "crates/email-parser",
    "crates/prover",
]

[features]

[dependencies]
num-bigint = { version = "0.4", default-features = false }
sha3 = { version = "0.10", default-features = false }
hex = "*"
sha2 = "0.10.6"
base64 = "0.21.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"

plonk = { path = "crates/plookup-sha256" }
prover = { path = "crates/prover" }
email-parser = { path = "crates/email-parser" }
