[package]
name = "email-parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha2 = "0.10.6"
hex = "0.4"
hexlit = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

thiserror = "1"
anyhow = { version = "1.0" }

email-rs = { git = "https://github.com/sking789/email-rs.git", branch = "multi-dkim-header" }
