[package]
name = "plonk"
description = "An experimental arkworks-based PLONK/PLOOKUP implementation"
license = "MIT/Apache-2.0"
version = "0.0.1"
edition = "2018"

[features]
default = ["std", "parallel"]
# default = ["std"]
std = ["ark-ff/std", "ark-std/std", "ark-poly/std", "ark-poly-commit/std"]
parallel = ["std", "rayon", "ark-ff/parallel", "ark-std/parallel", "ark-poly/parallel", "ark-poly-commit/parallel", "ark-ec/parallel"]
# derive = [ "ark-serialize-derive" ]


[dependencies]
rayon = { version = "1", optional = true }
rand_core = { version = "0.6", optional = false }

ark-ec = { version = "0.3", default-features = false }
ark-ff = { version = "0.3", default-features = false }
ark-std = { version = "0.3", default-features = false }
ark-poly = { version = "0.3", default-features = false }
ark-poly-commit = { version = "0.3", default-features = false }
ark-serialize = { version = "0.3", default-features = false }
# ark-serialize-derive = { version = "0.3.0", optional = true }

num-bigint = { version = "0.4", default-features = false }
sha3 = { version = "0.10", default-features = false }
sha2 = { version = "0.10", default-features = false }
hex = "*"
log = "0.4"

ark-bn254 = {version = "0.3.0", default-features = false, features = ["curve"]}

[dev-dependencies]