[package]
name = "prover"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1"
hex = "*"
anyhow = { version = "1.0" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

ark-std = { version = "0.3", default-features = false }
ark-ff = { version = "0.3", default-features = false }
ark-ec = { version = "0.3", default-features = false }
ark-bn254 = { version = "0.3.0", default-features = false, features = [
    "curve",
] }
ark-serialize = { version = "0.3" }
ark-poly = { version = "0.3", default-features = false }
ark-poly-commit = { version = "0.3", default-features = false }

plonk = { path = "../plookup-sha256" }
