[package]
name = "prover"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1"
hex = "*"
base64 = "0.21.0"
log = "0.4"
sha2 = "0.10.6"
anyhow = { version = "1.0" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

plonk = { path = "../plookup-sha256" }
email-parser = { path = "../email-parser" }